--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "apollo-server": "^2.6.4",
     "apollo-server-express": "^2.6.4",
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "formik": "^1.5.7",
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.8.12",
     "sequelize-cli": "^5.5.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yup": "^0.27.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.1"
