--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "forest-express-sequelize": "^3.2.3",
     "formik": "^1.5.7",
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
