--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,15 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/mongo:3.4.4
-
-    working_directory: ~/repo
-
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
       - run:
@@ -23,8 +15,7 @@ jobs:
           command: |
             echo 'export TAG=0.1.$CIRCLE_BUILD_NUM' >> $BASH_ENV
             echo 'export IMAGE_NAME=iut-notes-image' >> $BASH_ENV
-      - setup_remote_docker:
-          docker_layer_caching: true
+      - setup_remote_docker
       - run:
           name: Build and push Docker image
           command: |
