--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
       - run:
           name: Setup Env
           command: |
-            echo 'export TAG=0.1.$CIRCLE_BUILD_NUM' >> $BASH_ENV
-            echo 'export IMAGE_NAME=iut-notes-image' >> $BASH_ENV
+            echo ${CIRCLE_BUILD_NUM}
+            echo 'export TAG=0.1.${CIRCLE_BUILD_NUM}' >> $BASH_ENV
       - setup_remote_docker
       - run:
           name: Build and push Docker image
