--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,11 @@ jobs:
       - image: docker:17.05.0-ce-git
     steps:
       - checkout
+      - run:
+          name: "Pull submodules"
+          command: |
+            git submodule init
+            git submodule update --remote
       - setup_remote_docker
       - run:
           name: Build and push Docker image
