--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
           name: Build and push Docker image
           command: |
             docker build -t plaborderie/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
-            echo $DOCKER_PWD | docker login -u $DOCKER_LOGIN --password-stdin
+            docker login -u $DOCKER_LOGIN -p $DOCKER_PWD
             docker push plaborderie/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
       - run:
           name: Deploy app to AWS
