--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,7 @@ jobs:
             docker build -t plaborderie/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
             docker login -u $DOCKER_LOGIN -p $DOCKER_PWD
             docker push plaborderie/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
+            docker push plaborderie/$IMAGE_NAME:latest
       - run:
           name: Deploy app to AWS
           command: |
