--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,7 +19,7 @@ jobs:
       - run:
           name: Build and push Docker image
           command: |
-            docker build -t plaborderie/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} .
+            docker build -t plaborderie/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM} -t plaborderie/$IMAGE_NAME:latest .
             docker login -u $DOCKER_LOGIN -p $DOCKER_PWD
             docker push plaborderie/$IMAGE_NAME:0.1.${CIRCLE_BUILD_NUM}
             docker push plaborderie/$IMAGE_NAME:latest
