--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^1.5.7",
     "graphql": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
+    "markdown-pdf": "^10.0.0",
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "pg-native": "^3.0.0",
