--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "pg": "^7.11.0",
     "pg-hstore": "^2.3.3",
     "pg-native": "^3.0.0",
+    "phantomjs": "^2.1.7",
     "sequelize": "^5.8.12",
     "sequelize-cli": "^5.5.0",
     "uuid": "^3.3.2",
