--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,4 @@ jobs:
       - run:
           name: Deploy app to remote server
           command: |
-            ssh -o StrictHostKeyChecking=no root@iut-notes.fr "docker stack deploy --with-registry-auth -c <(docker-compose -f iut-notes-stack.yml config) iut_notes"
+            ssh -o StrictHostKeyChecking=no ubuntu@paul-laborderie.com "cd apps/iut-notes && docker stack deploy --with-registry-auth -c <(docker-compose config) iut-notes"
