--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,4 +26,5 @@ jobs:
       - run:
           name: Deploy app to remote server
           command: |
-            ssh -o StrictHostKeyChecking=no ubuntu@52.210.74.124 "cd apps/iut-notes && docker stack deploy --with-registry-auth -c <(docker-compose config) iut-notes"
+            ssh -o StrictHostKeyChecking=no -fnL localhost:2374:/var/run/docker.sock ubuntu@52.210.74.124
+            docker stack deploy --with-registry-auth -c docker-stack.yml iut-notes
