--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,4 +27,4 @@ jobs:
           name: Deploy app to remote server
           command: |
             ssh -o StrictHostKeyChecking=no -fnL localhost:2374:/var/run/docker.sock ubuntu@52.210.74.124
-            docker stack deploy --with-registry-auth -c docker-stack.yml iut-notes
+            docker -H localhost:2374 stack deploy --with-registry-auth -c docker-stack.yml iut-notes
