Using SCP to pass docker-stack.yml and environment

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,5 +26,8 @@ jobs:
       - run:
           name: Deploy app to remote server
           command: |
-            docker -H ssh://ubuntu@52.210.74.124 stack deploy --with-registry-auth -c docker-stack.yml iut-notes
+            scp -o StrictHostKeyChecking=no -r docker-stack.yml ubuntu@52.210.74.124:~/apps/iut-notes/docker-stack.yml
+            set > environment
+            scp -o StrictHostKeyChecking=no -r environment ubuntu@52.210.74.124:~/apps/iut-notes/.env
+            ssh -o StrictHostKeyChecking=no ubuntu@52.210.74.124 "cd apps/iut-notes && docker stack deploy --with-registry-auth -c <(docker-compose -f docker-stack.yml config) iut-notes"
             
