--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,5 +26,5 @@ jobs:
       - run:
           name: Deploy app to remote server
           command: |
-            docker -H ssh://ubuntu@52.210.74.124 stack deploy --with-registry-auth -c docker-stack.yml iut-notes
+            docker stack deploy --with-registry-auth -c docker-stack.yml iut-notes
             
