--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: docker:18.06.3-ce-git
+      - image: docker:18.09
     steps:
       - checkout
       - run:
@@ -26,5 +26,5 @@ jobs:
       - run:
           name: Deploy app to remote server
           command: |
-            docker stack deploy --with-registry-auth -c docker-stack.yml iut-notes
+            docker -H ssh://ubuntu@52.210.74.124 stack deploy --with-registry-auth -c docker-stack.yml iut-notes
             
