--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: docker:18.09
+      - image: docker:18.09-git
     steps:
       - checkout
       - run:
