--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: docker:18.09-git
+      - image: docker:18.09
     steps:
       - checkout
       - run:
@@ -26,5 +26,6 @@ jobs:
       - run:
           name: Deploy app to remote server
           command: |
+            ssh-keyscan -H 52.210.74.124 >> ~/.ssh/known_hosts
             docker -H ssh://ubuntu@52.210.74.124 stack deploy --with-registry-auth -c docker-stack.yml iut-notes
             
